Fix drift of the transformed image when moving mouse too quickly

We should use stable base for the iterative search algorithm, not
the current state of the args.

BUG:416899

# Conflicts:
#	plugins/tools/tool_transform2/kis_free_transform_strategy.cpp