plugins/tools/tool_transform2/kis_free_transform_strategy.cpp
@@ -127,7 +127,9 @@ struct KisFreeTransformStrategy::Private
 
     ToolTransformArgs clickArgs;
     QPointF clickPos;
-    bool isTransforming;
+    QTransform clickTransform;
+
+    bool isTransforming {false};
 
     QCursor getScaleCursor(const QPointF &handlePt);
     QCursor getShearCursor(const QPointF &start, const QPointF &end);
@@ -390,6 +392,9 @@ bool KisFreeTransformStrategy::beginPrimaryAction(const QPointF &pt)
     m_d->clickArgs = m_d->currentArgs;
     m_d->clickPos = pt;
 
+    KisTransformUtils::MatricesPack m(m_d->clickArgs);
+    m_d->clickTransform = m.finalTransform();
+
     return true;
 }
 
@@ -494,8 +499,8 @@ void KisFreeTransformStrategy::continuePrimaryAction(const QPointF &mousePos,
             movingPoint = m_d->transaction.originalMiddleBottom();
         }
 
-        QPointF staticPointInView = m_d->transform.map(staticPoint);
-        const QPointF movingPointInView = m_d->transform.map(movingPoint);
+        QPointF staticPointInView = m_d->clickTransform.map(staticPoint);
+        const QPointF movingPointInView = m_d->clickTransform.map(movingPoint);
 
         const QPointF projNormVector =
             KisAlgebra2D::normalize(movingPointInView - staticPointInView);
@@ -506,15 +511,15 @@ void KisFreeTransformStrategy::continuePrimaryAction(const QPointF &mousePos,
         const QPointF targetMovingPointInView = staticPointInView + projNormVector * projLength;
 
         // override scale static point if it is locked
-        if ((m_d->currentArgs.transformAroundRotationCenter() ^ altModifierActive) &&
+        if ((m_d->clickArgs.transformAroundRotationCenter() ^ altModifierActive) &&
             !qFuzzyCompare(anchorPoint.y(), movingPoint.y())) {
 
             staticPoint = anchorPoint;
-            staticPointInView = m_d->transform.map(staticPoint);
+            staticPointInView = m_d->clickTransform.map(staticPoint);
         }
 
         GSL::ScaleResult1D result =
-            GSL::calculateScaleY(m_d->currentArgs,
+            GSL::calculateScaleY(m_d->clickArgs,
                                  staticPoint,
                                  staticPointInView,
                                  movingPoint,
@@ -547,8 +552,8 @@ void KisFreeTransformStrategy::continuePrimaryAction(const QPointF &mousePos,
             movingPoint = m_d->transaction.originalMiddleRight();
         }
 
-        QPointF staticPointInView = m_d->transform.map(staticPoint);
-        const QPointF movingPointInView = m_d->transform.map(movingPoint);
+        QPointF staticPointInView = m_d->clickTransform.map(staticPoint);
+        const QPointF movingPointInView = m_d->clickTransform.map(movingPoint);
 
         const QPointF projNormVector =
             KisAlgebra2D::normalize(movingPointInView - staticPointInView);
@@ -563,11 +568,11 @@ void KisFreeTransformStrategy::continuePrimaryAction(const QPointF &mousePos,
             !qFuzzyCompare(anchorPoint.x(), movingPoint.x())) {
 
             staticPoint = anchorPoint;
-            staticPointInView = m_d->transform.map(staticPoint);
+            staticPointInView = m_d->clickTransform.map(staticPoint);
         }
 
         GSL::ScaleResult1D result =
-            GSL::calculateScaleX(m_d->currentArgs,
+            GSL::calculateScaleX(m_d->clickArgs,
                                  staticPoint,
                                  staticPointInView,
                                  movingPoint,
@@ -615,14 +620,11 @@ void KisFreeTransformStrategy::continuePrimaryAction(const QPointF &mousePos,
             staticPoint = anchorPoint;
         }
 
-        QPointF staticPointInView = m_d->transform.map(staticPoint);
+        QPointF staticPointInView = m_d->clickTransform.map(staticPoint);
         QPointF movingPointInView = mousePos;
 
         if (shiftModifierActive  ||  m_d->currentArgs.keepAspectRatio()) {
-            KisTransformUtils::MatricesPack m(m_d->clickArgs);
-            QTransform t = m.finalTransform();
-
-            QPointF refDiff = t.map(movingPoint) - staticPointInView;
+            QPointF refDiff = m_d->clickTransform.map(movingPoint) - staticPointInView;
             QPointF realDiff = mousePos - staticPointInView;
             realDiff = kisProjectOnVector(refDiff, realDiff);
 
@@ -630,11 +632,15 @@ void KisFreeTransformStrategy::continuePrimaryAction(const QPointF &mousePos,
         }
 
         GSL::ScaleResult2D result =
-            GSL::calculateScale2D(m_d->currentArgs,
+            GSL::calculateScale2D(m_d->clickArgs,
                                   staticPoint,
                                   staticPointInView,
                                   movingPoint,
                                   movingPointInView);
+
+        if (!result.isValid) {
+            break;
+        }
 
         m_d->currentArgs.setScaleX(result.scaleX);
         m_d->currentArgs.setScaleY(result.scaleY);
