plugins/tools/tool_transform2/kis_free_transform_strategy_gsl_helpers.h
@@ -51,6 +51,8 @@ namespace GSL
         QPointF transformedCenter;
         qreal scaleX;
         qreal scaleY;
+
+        bool isValid = false;
     };
 
     ScaleResult2D calculateScale2D(const ToolTransformArgs &args,
